Updated plugin conflict list and readme